# activity-spec

./: .gitignore  CITATION.cff  LICENSE  PROJECT_CONTEXT.md  README.md  pyproject.toml  reproduce.sh
docs/: DISTRIBUTION_ARCHITECTURE.md  HISTORICAL_NOTES.md
examples/i_need/: bell_labs_comm_1946.yaml  leipzig_psychophysics_1855.yaml  rand_carnegie_1952.yaml  scap_japan_1947.yaml  toyota_production_1948.yaml
examples/i_want/: deming_1947.yaml  fechner_1855.yaml  ohno_1948.yaml  shannon_1946.yaml  simon_1952.yaml
examples/match_reports/: deming_x_scap_japan.yaml  fechner_x_leipzig.yaml  ohno_x_toyota.yaml  shannon_x_bell_labs.yaml  simon_x_rand_carnegie.yaml
prompts/: ASP_01_GENERATE.md  ASP_02_MATCH.md
schema/: i_need.yaml  i_want.yaml  match_report.yaml
