[project]
name = "activity-spec"
version = "1.0.0"
description = "Activity Specification Protocol — machine-readable professional profiles"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Dmitry Zharnikov", email = "dmitry@spectralbranding.com"},
]
dependencies = []

[dependency-groups]
dev = [
    "pyyaml>=6.0",
]
